--- a/glossary.po
+++ b/glossary.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-08-04 11:03+0200\n"
+"PO-Revision-Date: 2021-10-05 13:25-0500\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -89,7 +89,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:33
 msgid "abstract base class"
-msgstr "clase base abstracta"
+msgstr "abstract base class"
 
 #: ../Doc/glossary.rst:35
 msgid ""
@@ -119,7 +119,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:46
 msgid "annotation"
-msgstr "anotación"
+msgstr "annotation"
 
 #: ../Doc/glossary.rst:48
 msgid ""
@@ -151,7 +151,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:60
 msgid "argument"
-msgstr "argumento"
+msgstr "argument"
 
 #: ../Doc/glossary.rst:62
 msgid ""
@@ -210,7 +210,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:90
 msgid "asynchronous context manager"
-msgstr "administrador asincrónico de contexto"
+msgstr "asynchronous context manager"
 
 #: ../Doc/glossary.rst:92
 msgid ""
@@ -224,7 +224,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:95
 msgid "asynchronous generator"
-msgstr "generador asincrónico"
+msgstr "asynchronous generator"
 
 #: ../Doc/glossary.rst:97
 msgid ""
@@ -259,7 +259,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:109
 msgid "asynchronous generator iterator"
-msgstr "iterador generador asincrónico"
+msgstr "asynchronous generator iterator"
 
 #: ../Doc/glossary.rst:111
 msgid "An object created by a :term:`asynchronous generator` function."
@@ -294,7 +294,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:123
 msgid "asynchronous iterable"
-msgstr "iterable asincrónico"
+msgstr "asynchronous iterable"
 
 #: ../Doc/glossary.rst:125
 msgid ""
@@ -326,7 +326,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:135
 msgid "attribute"
-msgstr "atributo"
+msgstr "attribute"
 
 #: ../Doc/glossary.rst:137
 msgid ""
@@ -340,7 +340,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:140
 msgid "awaitable"
-msgstr "a la espera"
+msgstr "awaitable"
 
 #: ../Doc/glossary.rst:142
 msgid ""
@@ -367,7 +367,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:149
 msgid "binary file"
-msgstr "archivo binario"
+msgstr "binary file"
 
 #: ../Doc/glossary.rst:151
 msgid ""
@@ -393,7 +393,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:160
 msgid "bytes-like object"
-msgstr "objetos tipo binarios"
+msgstr "bytes-like object"
 
 #: ../Doc/glossary.rst:162
 msgid ""
@@ -463,7 +463,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:191
 msgid "callback"
-msgstr "retrollamada"
+msgstr "callback"
 
 #: ../Doc/glossary.rst:193
 msgid ""
@@ -475,7 +475,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:195
 msgid "class"
-msgstr "clase"
+msgstr "class"
 
 #: ../Doc/glossary.rst:197
 msgid ""
@@ -488,7 +488,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:200
 msgid "class variable"
-msgstr "variable de clase"
+msgstr "class variable"
 
 #: ../Doc/glossary.rst:202
 msgid ""
@@ -500,7 +500,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:204
 msgid "coercion"
-msgstr "coerción"
+msgstr "coercion"
 
 #: ../Doc/glossary.rst:206
 msgid ""
@@ -524,7 +524,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:214
 msgid "complex number"
-msgstr "número complejo"
+msgstr "complex number"
 
 #: ../Doc/glossary.rst:216
 msgid ""
@@ -551,7 +551,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:226
 msgid "context manager"
-msgstr "administrador de contextos"
+msgstr "context manager"
 
 #: ../Doc/glossary.rst:228
 msgid ""
@@ -563,7 +563,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:231
 msgid "context variable"
-msgstr "variable de contexto"
+msgstr "context variable"
 
 #: ../Doc/glossary.rst:233
 msgid ""
@@ -584,7 +584,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:240
 msgid "contiguous"
-msgstr "contiguo"
+msgstr "contiguous"
 
 #: ../Doc/glossary.rst:244
 msgid ""
@@ -606,7 +606,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:252
 msgid "coroutine"
-msgstr "corrutina"
+msgstr "coroutine"
 
 #: ../Doc/glossary.rst:254
 msgid ""
@@ -623,7 +623,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:259
 msgid "coroutine function"
-msgstr "función corrutina"
+msgstr "coroutine function"
 
 #: ../Doc/glossary.rst:261
 msgid ""
@@ -655,7 +655,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:272
 msgid "decorator"
-msgstr "decorador"
+msgstr "decorator"
 
 #: ../Doc/glossary.rst:274
 msgid ""
@@ -718,12 +718,12 @@ msgid ""
 "the :ref:`Descriptor How To Guide <descriptorhowto>`."
 msgstr ""
 "Para obtener más información sobre los métodos de los descriptores, "
-"consulte :ref:`descriptors` o :ref:`Guía práctica de uso de los descriptores"
-"<descriptorhowto>`."
+"consulte :ref:`descriptors` o :ref:`Guía práctica de uso de los "
+"descriptores<descriptorhowto>`."
 
 #: ../Doc/glossary.rst:306
 msgid "dictionary"
-msgstr "diccionario"
+msgstr "dictionary"
 
 #: ../Doc/glossary.rst:308
 msgid ""
@@ -737,7 +737,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:311
 msgid "dictionary comprehension"
-msgstr "comprensión de diccionarios"
+msgstr "dictionary comprehension"
 
 #: ../Doc/glossary.rst:313
 msgid ""
@@ -753,7 +753,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:317
 msgid "dictionary view"
-msgstr "vista de diccionario"
+msgstr "dictionary view"
 
 #: ../Doc/glossary.rst:319
 msgid ""
@@ -790,7 +790,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:333
 msgid "duck-typing"
-msgstr "tipado de pato"
+msgstr "duck-typing"
 
 #: ../Doc/glossary.rst:335
 msgid ""
@@ -838,7 +838,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:352
 msgid "expression"
-msgstr "expresión"
+msgstr "expression"
 
 #: ../Doc/glossary.rst:354
 msgid ""
@@ -860,7 +860,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:361
 msgid "extension module"
-msgstr "módulo de extensión"
+msgstr "extension module"
 
 #: ../Doc/glossary.rst:363
 msgid ""
@@ -886,7 +886,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:370
 msgid "file object"
-msgstr "objeto archivo"
+msgstr "file object"
 
 #: ../Doc/glossary.rst:372
 msgid ""
@@ -921,7 +921,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:385
 msgid "file-like object"
-msgstr "objetos tipo archivo"
+msgstr "file-like object"
 
 #: ../Doc/glossary.rst:387
 msgid "A synonym for :term:`file object`."
@@ -929,7 +929,7 @@ msgstr "Un sinónimo de :term:`file object`."
 
 #: ../Doc/glossary.rst:388
 msgid "finder"
-msgstr "buscador"
+msgstr "finder"
 
 #: ../Doc/glossary.rst:390
 msgid ""
@@ -956,7 +956,7 @@ msgstr "Vea :pep:`302`, :pep:`420` y :pep:`451` para mayores detalles."
 
 #: ../Doc/glossary.rst:398
 msgid "floor division"
-msgstr "división entera"
+msgstr "floor division"
 
 #: ../Doc/glossary.rst:400
 msgid ""
@@ -974,7 +974,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:405
 msgid "function"
-msgstr "función"
+msgstr "function"
 
 #: ../Doc/glossary.rst:407
 msgid ""
@@ -990,7 +990,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:411
 msgid "function annotation"
-msgstr "anotación de función"
+msgstr "function annotation"
 
 #: ../Doc/glossary.rst:413
 msgid "An :term:`annotation` of a function parameter or return value."
@@ -1046,7 +1046,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:439
 msgid "garbage collection"
-msgstr "recolección de basura"
+msgstr "garbage collection"
 
 #: ../Doc/glossary.rst:441
 msgid ""
@@ -1063,7 +1063,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:447
 msgid "generator"
-msgstr "generador"
+msgstr "generator"
 
 #: ../Doc/glossary.rst:449
 msgid ""
@@ -1089,7 +1089,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:457
 msgid "generator iterator"
-msgstr "iterador generador"
+msgstr "generator iterator"
 
 #: ../Doc/glossary.rst:459
 msgid "An object created by a :term:`generator` function."
@@ -1110,7 +1110,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:468
 msgid "generator expression"
-msgstr "expresión generadora"
+msgstr "generator expression"
 
 #: ../Doc/glossary.rst:470
 msgid ""
@@ -1126,7 +1126,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:477
 msgid "generic function"
-msgstr "función genérica"
+msgstr "generic function"
 
 #: ../Doc/glossary.rst:479
 msgid ""
@@ -1148,7 +1148,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:485
 msgid "generic type"
-msgstr "tipos genéricos"
+msgstr "generic type"
 
 #: ../Doc/glossary.rst:487
 msgid ""
@@ -1178,7 +1178,7 @@ msgstr "Vea :term:`global interpreter lock`."
 
 #: ../Doc/glossary.rst:496
 msgid "global interpreter lock"
-msgstr "bloqueo global del intérprete"
+msgstr "global interpreter lock"
 
 #: ../Doc/glossary.rst:498
 msgid ""
@@ -1314,7 +1314,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:552
 msgid "import path"
-msgstr "ruta de importación"
+msgstr "import path"
 
 #: ../Doc/glossary.rst:554
 msgid ""
@@ -1331,7 +1331,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:559
 msgid "importing"
-msgstr "importar"
+msgstr "importing"
 
 #: ../Doc/glossary.rst:561
 msgid ""
@@ -1343,7 +1343,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:563
 msgid "importer"
-msgstr "importador"
+msgstr "importer"
 
 #: ../Doc/glossary.rst:565
 msgid ""
@@ -1355,7 +1355,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:567
 msgid "interactive"
-msgstr "interactivo"
+msgstr "interactive"
 
 #: ../Doc/glossary.rst:569
 msgid ""
@@ -1470,7 +1470,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:616
 msgid "iterator"
-msgstr "iterador"
+msgstr "iterator"
 
 #: ../Doc/glossary.rst:618
 msgid ""
@@ -1511,7 +1511,7 @@ msgstr "Puede encontrar más información en :ref:`typeiter`."
 
 #: ../Doc/glossary.rst:634
 msgid "key function"
-msgstr "función clave"
+msgstr "key function"
 
 #: ../Doc/glossary.rst:636
 msgid ""
@@ -1559,7 +1559,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:655
 msgid "keyword argument"
-msgstr "argumento nombrado"
+msgstr "keyword argument"
 
 #: ../Doc/glossary.rst:657 ../Doc/glossary.rst:934
 msgid "See :term:`argument`."
@@ -1613,7 +1613,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:675
 msgid "list"
-msgstr "lista"
+msgstr "list"
 
 #: ../Doc/glossary.rst:677
 msgid ""
@@ -1627,7 +1627,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:680
 msgid "list comprehension"
-msgstr "comprensión de listas"
+msgstr "list comprehension"
 
 #: ../Doc/glossary.rst:682
 msgid ""
@@ -1646,7 +1646,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:688
 msgid "loader"
-msgstr "cargador"
+msgstr "loader"
 
 #: ../Doc/glossary.rst:690
 msgid ""
@@ -1662,7 +1662,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:694
 msgid "magic method"
-msgstr "método mágico"
+msgstr "magic method"
 
 #: ../Doc/glossary.rst:698
 msgid "An informal synonym for :term:`special method`."
@@ -1670,7 +1670,7 @@ msgstr "Una manera informal de llamar a un :term:`special method`."
 
 #: ../Doc/glossary.rst:699
 msgid "mapping"
-msgstr "mapeado"
+msgstr "mapping"
 
 #: ../Doc/glossary.rst:701
 msgid ""
@@ -1690,7 +1690,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:707
 msgid "meta path finder"
-msgstr "meta buscadores de ruta"
+msgstr "meta path finder"
 
 #: ../Doc/glossary.rst:709
 msgid ""
@@ -1712,7 +1712,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:715
 msgid "metaclass"
-msgstr "metaclase"
+msgstr "metaclass"
 
 #: ../Doc/glossary.rst:717
 msgid ""
@@ -1743,7 +1743,7 @@ msgstr "Más información hallará en :ref:`metaclasses`."
 
 #: ../Doc/glossary.rst:728
 msgid "method"
-msgstr "método"
+msgstr "method"
 
 #: ../Doc/glossary.rst:730
 msgid ""
@@ -1759,7 +1759,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:734
 msgid "method resolution order"
-msgstr "orden de resolución de métodos"
+msgstr "method resolution order"
 
 #: ../Doc/glossary.rst:736
 msgid ""
@@ -1775,7 +1775,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:740
 msgid "module"
-msgstr "módulo"
+msgstr "module"
 
 #: ../Doc/glossary.rst:742
 msgid ""
@@ -1793,7 +1793,7 @@ msgstr "Vea también :term:`package`."
 
 #: ../Doc/glossary.rst:747
 msgid "module spec"
-msgstr "especificador de módulo"
+msgstr "module spec"
 
 #: ../Doc/glossary.rst:749
 msgid ""
@@ -1826,7 +1826,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:758
 msgid "named tuple"
-msgstr "tupla nombrada"
+msgstr "named tuple"
 
 #: ../Doc/glossary.rst:760
 msgid ""
@@ -1868,7 +1868,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:782
 msgid "namespace"
-msgstr "espacio de nombres"
+msgstr "namespace"
 
 #: ../Doc/glossary.rst:784
 msgid ""
@@ -1896,7 +1896,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:794
 msgid "namespace package"
-msgstr "paquete de espacios de nombres"
+msgstr "namespace package"
 
 #: ../Doc/glossary.rst:796
 msgid ""
@@ -1916,7 +1916,7 @@ msgstr "Vea también :term:`module`."
 
 #: ../Doc/glossary.rst:802
 msgid "nested scope"
-msgstr "alcances anidados"
+msgstr "nested scope"
 
 #: ../Doc/glossary.rst:804
 msgid ""
@@ -1938,7 +1938,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:811
 msgid "new-style class"
-msgstr "clase de nuevo estilo"
+msgstr "new-style class"
 
 #: ../Doc/glossary.rst:813
 msgid ""
@@ -1955,7 +1955,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:817
 msgid "object"
-msgstr "objeto"
+msgstr "object"
 
 #: ../Doc/glossary.rst:819
 msgid ""
@@ -1968,7 +1968,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:822
 msgid "package"
-msgstr "paquete"
+msgstr "package"
 
 #: ../Doc/glossary.rst:824
 msgid ""
@@ -1986,7 +1986,7 @@ msgstr "Vea también :term:`regular package` y :term:`namespace package`."
 
 #: ../Doc/glossary.rst:829
 msgid "parameter"
-msgstr "parámetro"
+msgstr "parameter"
 
 #: ../Doc/glossary.rst:831
 msgid ""
@@ -2085,7 +2085,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:882
 msgid "path entry"
-msgstr "entrada de ruta"
+msgstr "path entry"
 
 #: ../Doc/glossary.rst:884
 msgid ""
@@ -2097,7 +2097,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:886
 msgid "path entry finder"
-msgstr "buscador de entradas de ruta"
+msgstr "path entry finder"
 
 #: ../Doc/glossary.rst:888
 msgid ""
@@ -2119,7 +2119,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:894
 msgid "path entry hook"
-msgstr "gancho a entrada de ruta"
+msgstr "path entry hook"
 
 #: ../Doc/glossary.rst:896
 msgid ""
@@ -2133,7 +2133,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:899
 msgid "path based finder"
-msgstr "buscador basado en ruta"
+msgstr "path based finder"
 
 #: ../Doc/glossary.rst:901
 msgid ""
@@ -2145,7 +2145,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:903
 msgid "path-like object"
-msgstr "objeto tipo ruta"
+msgstr "path-like object"
 
 #: ../Doc/glossary.rst:905
 msgid ""
@@ -2204,7 +2204,7 @@ msgstr "Vea :pep:`1`."
 
 #: ../Doc/glossary.rst:928
 msgid "portion"
-msgstr "porción"
+msgstr "portion"
 
 #: ../Doc/glossary.rst:930
 msgid ""
@@ -2217,7 +2217,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:932
 msgid "positional argument"
-msgstr "argumento posicional"
+msgstr "positional argument"
 
 #: ../Doc/glossary.rst:935
 msgid "provisional API"
@@ -2265,7 +2265,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:953
 msgid "provisional package"
-msgstr "paquete provisorio"
+msgstr "provisional package"
 
 #: ../Doc/glossary.rst:955
 msgid "See :term:`provisional API`."
@@ -2287,7 +2287,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:961
 msgid "Pythonic"
-msgstr "Pythónico"
+msgstr "Pythonic"
 
 #: ../Doc/glossary.rst:963
 msgid ""
@@ -2312,7 +2312,7 @@ msgstr "En contraste, un método Pythónico más limpio::"
 
 #: ../Doc/glossary.rst:977
 msgid "qualified name"
-msgstr "nombre calificado"
+msgstr "qualified name"
 
 #: ../Doc/glossary.rst:979
 msgid ""
@@ -2338,7 +2338,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1003
 msgid "reference count"
-msgstr "contador de referencias"
+msgstr "reference count"
 
 #: ../Doc/glossary.rst:1005
 msgid ""
@@ -2358,7 +2358,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1011
 msgid "regular package"
-msgstr "paquete regular"
+msgstr "regular package"
 
 #: ../Doc/glossary.rst:1013
 msgid ""
@@ -2392,7 +2392,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1024
 msgid "sequence"
-msgstr "secuencia"
+msgstr "sequence"
 
 #: ../Doc/glossary.rst:1026
 msgid ""
@@ -2429,7 +2429,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1042
 msgid "set comprehension"
-msgstr "comprensión de conjuntos"
+msgstr "set comprehension"
 
 #: ../Doc/glossary.rst:1044
 msgid ""
@@ -2445,7 +2445,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1048
 msgid "single dispatch"
-msgstr "despacho único"
+msgstr "single dispatch"
 
 #: ../Doc/glossary.rst:1050
 msgid ""
@@ -2457,7 +2457,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1052
 msgid "slice"
-msgstr "rebanada"
+msgstr "slice"
 
 #: ../Doc/glossary.rst:1054
 msgid ""
@@ -2473,7 +2473,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1058
 msgid "special method"
-msgstr "método especial"
+msgstr "special method"
 
 #: ../Doc/glossary.rst:1062
 msgid ""
@@ -2489,7 +2489,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1066
 msgid "statement"
-msgstr "sentencia"
+msgstr "statement"
 
 #: ../Doc/glossary.rst:1068
 msgid ""
@@ -2504,7 +2504,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1071
 msgid "text encoding"
-msgstr "codificación de texto"
+msgstr "text encoding"
 
 #: ../Doc/glossary.rst:1073
 msgid "A codec which encodes Unicode strings to bytes."
@@ -2512,7 +2512,7 @@ msgstr "Un códec que codifica las cadenas Unicode a bytes."
 
 #: ../Doc/glossary.rst:1074
 msgid "text file"
-msgstr "archivo de texto"
+msgstr "text file"
 
 #: ../Doc/glossary.rst:1076
 msgid ""
@@ -2538,7 +2538,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1085
 msgid "triple-quoted string"
-msgstr "cadena con triple comilla"
+msgstr "triple-quoted string"
 
 #: ../Doc/glossary.rst:1087
 msgid ""
@@ -2559,7 +2559,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1094
 msgid "type"
-msgstr "tipo"
+msgstr "type"
 
 #: ../Doc/glossary.rst:1096
 msgid ""
@@ -2573,7 +2573,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1100
 msgid "type alias"
-msgstr "alias de tipos"
+msgstr "type alias"
 
 #: ../Doc/glossary.rst:1102
 msgid "A synonym for a type, created by assigning the type to an identifier."
@@ -2598,7 +2598,7 @@ msgstr "Vea :mod:`typing` y :pep:`484`, que describen esta funcionalidad."
 
 #: ../Doc/glossary.rst:1119
 msgid "type hint"
-msgstr "indicador de tipo"
+msgstr "type hint"
 
 #: ../Doc/glossary.rst:1121
 msgid ""
@@ -2629,7 +2629,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1133
 msgid "universal newlines"
-msgstr "saltos de líneas universales"
+msgstr "universal newlines"
 
 #: ../Doc/glossary.rst:1135
 msgid ""
@@ -2647,7 +2647,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1140
 msgid "variable annotation"
-msgstr "anotación de variable"
+msgstr "variable annotation"
 
 #: ../Doc/glossary.rst:1142
 msgid "An :term:`annotation` of a variable or a class attribute."
@@ -2685,7 +2685,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1159
 msgid "virtual environment"
-msgstr "entorno virtual"
+msgstr "virtual environment"
 
 #: ../Doc/glossary.rst:1161
 msgid ""
@@ -2705,7 +2705,7 @@ msgstr "Vea también :mod:`venv`."
 
 #: ../Doc/glossary.rst:1167
 msgid "virtual machine"
-msgstr "máquina virtual"
+msgstr "virtual machine"
 
 #: ../Doc/glossary.rst:1169
 msgid ""
@@ -2717,7 +2717,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:1171
 msgid "Zen of Python"
-msgstr "Zen de Python"
+msgstr "Zen of Python"
 
 #: ../Doc/glossary.rst:1173
 msgid ""
