--- a/glossary.po
+++ b/glossary.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-10-05 13:25-0500\n"
+"PO-Revision-Date: 2021-10-06 09:00-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../Doc/glossary.rst:5
 msgid "Glossary"
@@ -89,7 +89,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:33
 msgid "abstract base class"
-msgstr "abstract base class"
+msgstr "abstract base class (clase base abstracta)"
 
 #: ../Doc/glossary.rst:35
 msgid ""
