--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -4,85 +4,91 @@
 # package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2021.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python en Español 3.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2021-10-06 18:35+0100\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
+"Language-Team: \n"
+"Language: es\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/3.9.rst:3
 msgid "What's New In Python 3.9"
-msgstr ""
+msgstr "Novedades de Python 3.9"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Release"
-msgstr ""
+msgstr "Versión"
 
 #: ../Doc/whatsnew/3.9.rst:5
 msgid "|release|"
-msgstr ""
+msgstr "|release|"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Date"
-msgstr ""
+msgstr "Fecha"
 
 #: ../Doc/whatsnew/3.9.rst:6
 msgid "|today|"
-msgstr ""
+msgstr "|today|"
 
 #: ../Doc/whatsnew/3.9.rst
 msgid "Editor"
-msgstr ""
+msgstr "Editor"
 
 #: ../Doc/whatsnew/3.9.rst:7
 msgid "Łukasz Langa"
-msgstr ""
+msgstr "Łukasz Langa"
 
 #: ../Doc/whatsnew/3.9.rst:47
 msgid ""
 "This article explains the new features in Python 3.9, compared to 3.8. "
 "Python 3.9 was released on October 5th, 2020."
 msgstr ""
+"Este artículo explica las nuevas características de Python 3.9, en "
+"comparación con 3.8. Python 3.9 fue lanzado el 5 de octubre de 2020."
 
 #: ../Doc/whatsnew/3.9.rst:50
 msgid "For full details, see the :ref:`changelog <changelog>`."
-msgstr ""
+msgstr "Para más información, consulta el :ref:`changelog <changelog>`."
 
 #: ../Doc/whatsnew/3.9.rst:54
 msgid ":pep:`596` - Python 3.9 Release Schedule"
-msgstr ""
+msgstr ":pep:`596` - Python 3.9 Release Schedule"
 
 #: ../Doc/whatsnew/3.9.rst:58
 msgid "Summary -- Release highlights"
-msgstr ""
+msgstr "Resumen -- Puntos destacados del lanzamiento"
 
 #: ../Doc/whatsnew/3.9.rst:63
 msgid "New syntax features:"
-msgstr ""
+msgstr "Nuevas características de sintaxis:"
 
 #: ../Doc/whatsnew/3.9.rst:65
 msgid ":pep:`584`, union operators added to ``dict``;"
-msgstr ""
+msgstr ":pep:`584`, operadores de unión añadidos ``dict``;"
 
 #: ../Doc/whatsnew/3.9.rst:66
 msgid ":pep:`585`, type hinting generics in standard collections;"
 msgstr ""
+":pep:`585`, anotaciones de tipado genéricas en las colecciones estándar;"
 
 #: ../Doc/whatsnew/3.9.rst:67
+#, fuzzy
 msgid ":pep:`614`, relaxed grammar restrictions on decorators."
-msgstr ""
+msgstr ":pep:`614`, menores restricciones gramaticales en decoradores."
 
 #: ../Doc/whatsnew/3.9.rst:69
 msgid "New built-in features:"
-msgstr ""
+msgstr "Nuevas características incorporadas:"
 
 #: ../Doc/whatsnew/3.9.rst:71
 msgid ":pep:`616`, string methods to remove prefixes and suffixes."
@@ -133,6 +139,11 @@ msgid ""
 "`time`, :mod:`_weakref`) now use multiphase initialization as defined by PEP "
 "489;"
 msgstr ""
+"varios módulos de Python (:mod:'_abc', :mod:'audioop', :mod:'_bz2', :"
+"mod:'_codecs', :mod:'_contextvars', :mod:'_crypt', :mod:'_functools', :"
+"mod:'_json', :mod:'_locale', :mod:'math', :mod:'operator', :mod:'resource', :"
+"mod:'time', :mod:'_weakref') ahora usan la inicialización multifásica según "
+"lo definido por PEP 489;"
 
 #: ../Doc/whatsnew/3.9.rst:92
 msgid ""
