--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -1279,8 +1279,8 @@ msgid ""
 msgstr ""
 "Cuando se usa ``@classmethod`` y ``@staticmethod`` para envolver métodos "
 "como clase o métodos estáticos, el objeto decorador ahora expone la función "
-"decorada como su atributo :attr:`__func__`. (Contribuido por Amaury "
-"Forgeot d'Arc, después de una sugerencia de George Sakkis; :issue:`5982`.)"
+"decorada como su atributo :attr:`__func__`. (Contribuido por Amaury Forgeot "
+"d'Arc, después de una sugerencia de George Sakkis; :issue:`5982`.)"
 
 #: ../Doc/whatsnew/2.7.rst:867 ../Doc/whatsnew/2.7.rst:2462
 #, fuzzy
