started the 36 translation

--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -6,27 +6,29 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-10-08 09:13+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
+"Language: es\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/3.6.rst:3
 msgid "What's New In Python 3.6"
-msgstr ""
+msgstr "Novedades de Python 3.6"
 
 #: ../Doc/whatsnew/3.6.rst
 msgid "Editors"
-msgstr ""
+msgstr "Editores"
 
 #: ../Doc/whatsnew/3.6.rst:5
 msgid "Elvis Pranskevichus <elvis@magic.io>, Yury Selivanov <yury@magic.io>"
