Fix build issues

--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -4745,7 +4745,7 @@ msgstr ""
 #: ../Doc/whatsnew/2.6.rst:2747
 #, fuzzy
 msgid "The :mod:`future_builtins` module"
-msgstr "El módulo :mod:`future_builtins"
+msgstr "El módulo :mod:`future_builtins`"
 
 #: ../Doc/whatsnew/2.6.rst:2749
 #, fuzzy
@@ -4815,7 +4815,7 @@ msgid ""
 "about JSON, see http://www.json.org."
 msgstr ""
 "El nuevo módulo :mod:`json` soporta la codificación y decodificación de "
-"tipos Python en JSON (Javascript Object Notation). JSON es un formato de "
+"tipos Python en JSON (*Javascript Object Notation*). JSON es un formato de "
 "intercambio ligero que se utiliza a menudo en las aplicaciones web. Para más "
 "información sobre JSON, consulte http://www.json.org."
 
@@ -5359,9 +5359,9 @@ msgstr ""
 "Varios tipos de datos básicos, como los enteros y las cadenas, mantienen "
 "listas internas de objetos libres que pueden reutilizarse.  Las estructuras "
 "de datos para estas listas libres siguen ahora una convención de "
-"nomenclatura: la variable se llama siempre ``lista_libre``, el contador se "
-"llama siempre ``numfree``, y<typename>siempre se define</typename> una macro "
-"``Py_MAXFREELIST``<typename>.</typename>"
+"nomenclatura: la variable se llama siempre ``free_list``, el contador se "
+"llama siempre ``numfree``, y siempre se define una macro "
+"``Py<typename>_MAXFREELIST``"
 
 #: ../Doc/whatsnew/2.6.rst:3081
 #, fuzzy
