--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-10-08 09:13+0100\n"
+"PO-Revision-Date: 2021-10-08 09:30+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +28,7 @@ msgstr "Novedades de Python 3.6"
 
 #: ../Doc/whatsnew/3.6.rst
 msgid "Editors"
-msgstr "Editores"
+msgstr "Editors"
 
 #: ../Doc/whatsnew/3.6.rst:5
 msgid "Elvis Pranskevichus <elvis@magic.io>, Yury Selivanov <yury@magic.io>"
