--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -1461,11 +1461,11 @@ msgid ""
 msgstr ""
 "El recolector de basura intenta evitar el seguimiento de contenedores "
 "simples que no pueden formar parte de un ciclo. En Python 2.7, esto es ahora "
-"cierto para tuplas y dicts que contienen tipos atómicos (como ints, cadenas, "
-"etc.). Transitoriamente, un dict que contenga tuplas de tipos atómicos "
-"tampoco será rastreado. Esto ayuda a reducir el coste de cada recogida de "
-"basura al disminuir el número de objetos que debe considerar y recorrer el "
-"recolector. (Contribución de Antoine Pitrou; :issue:`4688`.)"
+"cierto para tuplas y diccionarios que contienen tipos atómicos (como "
+"enteros, cadenas, etc.). Transitoriamente, un dict que contenga tuplas de "
+"tipos atómicos tampoco será rastreado. Esto ayuda a reducir el coste de cada "
+"recogida de basura al disminuir el número de objetos que debe considerar y "
+"recorrer el recolector. (Contribución de Antoine Pitrou; :issue:`4688`.)"
 
 #: ../Doc/whatsnew/2.7.rst:956
 #, fuzzy
@@ -1867,7 +1867,6 @@ msgstr ""
 "Quinlan; :issue:`5788`.)"
 
 #: ../Doc/whatsnew/2.7.rst:1183
-#, fuzzy
 msgid ""
 "New method: the :class:`~decimal.Decimal` class gained a :meth:`~decimal."
 "Decimal.from_float` class method that performs an exact conversion of a "
@@ -1884,8 +1883,8 @@ msgstr ""
 "número de punto flotante a un :class:`~decimal.Decimal`. Esta conversión "
 "exacta busca la aproximación decimal más cercana al valor de la "
 "representación de punto flotante; el valor decimal resultante incluirá, por "
-"tanto, la inexactitud, si la hubiera. For example, ``Decimal."
-"from_float(0.1)`` returns "
+"tanto, la inexactitud, si la hubiera. Por ejemplo, ``Decimal."
+"from_float(0.1)`` retorna "
 "``Decimal('0.1000000000000000055511151231257827021181583404541015625')``. "
 "(Implementado por Raymond Hettinger; :issue:`4796`.)"
 
@@ -3781,14 +3780,13 @@ msgid ""
 "meth:`~xml.etree.ElementTree.register_namespace`.  In XML mode, you can use "
 "the true/false *xml_declaration* parameter to suppress the XML declaration."
 msgstr ""
-"También se ha mejorado la gestión de los espacios de nombres. "
-"<whatever>Ahora</whatever> todas las<whatever>declaraciones</"
-"whatever>``xmlns<whatever>:`` se emiten en el elemento raíz, y no dispersas "
-"en el XML resultante.  Se puede establecer el espacio de nombres por defecto "
-"para un árbol mediante el atributo :attr:`default_namespace` y se pueden "
-"registrar nuevos prefijos con :meth:`~xml.etree.ElementTree."
+"También se ha mejorado la gestión de los espacios de nombres. Ahora todas "
+"las declaraciones``xmlns:<whatever>`` se emiten en el elemento raíz, y no "
+"dispersas en el XML resultante.  Se puede establecer el espacio de nombres "
+"por defecto para un árbol mediante el atributo :attr:`default_namespace` y "
+"se pueden registrar nuevos prefijos con :meth:`~xml.etree.ElementTree."
 "register_namespace`.  En el modo XML, puede utilizar el parámetro true/false "
-"*xml_declaration* para suprimir la declaración XML.</whatever>"
+"*xml_declaration* para suprimir la declaración XML."
 
 #: ../Doc/whatsnew/2.7.rst:2047
 #, fuzzy
@@ -3838,7 +3836,7 @@ msgid ""
 "you should be explicit: write ``len(elem) != 0`` if you're interested in the "
 "number of children, or ``elem is not None``."
 msgstr ""
-"Deprecated: el uso de un elemento como booleano (es decir, ``if elem:``) "
+"Deprecado: el uso de un elemento como booleano (es decir, ``if elem:``) "
 "devolvía true si el elemento tenía algún hijo, o false si no había ningún "
 "hijo.  Este comportamiento es confuso -- ``None`` es falso, pero también lo "
 "es un elemento sin hijos? -- por lo que ahora provocará un :exc:"
@@ -3977,7 +3975,7 @@ msgstr ""
 "`PyLong_AsLongLongAndOverflow` aproximan un entero Python long como un C :c:"
 "type:`long` o :c:type:`long long`. Si el número es demasiado grande para "
 "caber en el tipo de salida, se establece una bandera *overflow* y se "
-"devuelve al llamante. (Contribución de Case Van Horsen; :issue:`7528` y :"
+"devuelve al invocador. (Contribución de Case Van Horsen; :issue:`7528` y :"
 "issue:`7767`)"
 
 #: ../Doc/whatsnew/2.7.rst:2152
